fix: navigation collapse

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,8 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.nav-content > ul {
+  background: none !important;
+  backdrop-filter: none !important;
+}
